--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,10 +7,13 @@ buildscript {
         compileSdkVersion = 28
         targetSdkVersion = 28
         supportLibVersion = "28.0.0"
+        googlePlayServicesVersion = "11.8.0"
+        androidMapsUtilsVersion = "0.5+"
     }
     repositories {
         google()
         jcenter()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
@@ -31,3 +34,4 @@ allprojects {
         }
     }
 }
+
