--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-native": "0.59.5",
     "react-native-gesture-handler": "^1.2.0",
     "react-native-maps": "^0.24.2",
-    "react-navigation": "^3.9.1"
+    "react-navigation": "^3.9.1",
+    "reactotron-react-native": "^3.4.1",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
