--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.5",
+    "react-native-card-stack-swiper": "^1.1.0",
     "react-native-gesture-handler": "^1.2.0",
     "react-native-maps": "^0.24.2",
     "react-navigation": "^3.9.1",
-    "reactotron-react-native": "^3.4.1",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.2",
+    "reduxsauce": "^1.1.0",
+    "seamless-immutable": "^7.1.4",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
@@ -25,7 +30,10 @@
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
     "jest": "^24.7.1",
     "metro-react-native-babel-preset": "^0.53.1",
-    "react-test-renderer": "16.8.3"
+    "react-test-renderer": "16.8.3",
+    "reactotron-react-native": "^3.5.0",
+    "reactotron-redux": "^3.1.0",
+    "reactotron-redux-saga": "^4.2.2"
   },
   "jest": {
     "preset": "react-native"
